# Zero

./: .gitignore  .justfile  Cargo.toml  README.md  ROADMAP.txt  go.mod  main.go
cmd/: cmdClean.go  cmdCompletion.go  cmdFloat.go  cmdIdentity.go  cmdKill.go  cmdLaunch.go  cmdList.go  cmdMonitor.go  cmdName.go  cmdStack.go  cmdTab.go  cmdUpdate.go  docs.json  root.go  utilFloat.go  utilTab.go
layouts/: devel.kdl
layouts/launch/: update.kdl
layouts/tab/: devel.kdl
sh/: update_go.sh
src/: cli.rs  cmd.rs  cmds.rs  main.rs
src/cmd/: float.rs  list.rs  monitor.rs  name.rs  stack.rs  update.rs
src/cmds/: clean.rs  completion.rs  float.rs  identity.rs  kill.rs  launch.rs  tab.rs
src/util/: shell.rs
