[package]
name = "zero"
version = "0.1.0"
edition = "2024"
description = "Zero Zellij overhead - A Zellij session manager"
authors = ["Daniel Rivas <danielrivasmd@gmail.com>"]

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"
anyhow = "1.0"
lazy_static = "1.4"
