[package]
name = "zero"
version = "0.1.0"
authors = ["Daniel Rivas <danielrivasmd@gmail.com>"]
repository = "https://github.com/DanielRivasMD/TabulaRasa"
readme = "README.md"
description = "Zero Zellij overhead - A Zellij session manager"
edition = "2024"

[[bin]]
name = "x"
path = "src/main.rs"


[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"
anyhow = "1.0"
lazy_static = "1.4"
