[package]
name = "zero"
version = "0.1.0"
authors = ["Daniel Rivas <danielrivasmd@gmail.com>"]
repository = "https://github.com/DanielRivasMD/Zero"
keywords = []
categories = []
readme = "README.md"
description = "Zero Zellij overhead - A Zellij session manager"
edition = "2024"

[[bin]]
name = "x"
path = "src/main.rs"


[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
colored = "3"
lazy_static = "1"
tempfile = "3"
